feat:完成編輯與新增View修改、車輛類型中文對應

--- a/TestProject.Core/Localization/Source/TestProject.xml
+++ b/TestProject.Core/Localization/Source/TestProject.xml
@@ -78,5 +78,6 @@
     <text name="Delete">Delete</text>
 
     <text name="Persons">Persons</text>
+    <text name="Vehicle">Vehicle</text>
   </texts>
 </localizationDictionary>
